--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -40,8 +40,8 @@
 #   weight = 15
 
 [[main]]
-  name = "Blog"
-  url = "/blog/"
+  name = "Playground"
+  url = "/playground/"
   weight = 20
 
 [[main]]
