Add documentation for Language Constructs

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -7,5 +7,11 @@
     "MD033": false,
     "MD034": false
   },
-  "ignores": ["node_modules", "CHANGELOG.md", "README.md", "content/en/playground.md"]
+  "ignores": [
+    "node_modules",
+    "CHANGELOG.md",
+    "README.md",
+    "content/en/playground.md",
+    "content/en/docs/prologue/languageconstructs.md"
+  ]
 }
